...
    return SafeArea(
      top: false,
      bottom: false,
      child: Card(
        margin: const EdgeInsets.symmetric(horizontal: 16),
        child: ListTile(
          key: const Key('devotion_mini_player'),
          title: Text(
            lang.translate(audio.current!.titleKey),
            maxLines: 1,
            overflow: TextOverflow.ellipsis,
          ),
          onTap: () => Navigator.push(
...
